Remove large model files and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ venv/
 env/
 ENV/
 
-# Model files (optional - uncomment if models are too large)
-# *.joblib
+# Model files (too large for GitHub - train locally)
+*.joblib
 
 # Uploaded images
 static/*.jpg
